fix view options not showing when advanced view is unchecked on multisync page

--- a/www/css/fpp.css
+++ b/www/css/fpp.css
@@ -1759,6 +1759,9 @@ body .sm-clean a .sub-arrow {
 
 	padding-top: 2em;
 }
+#fppSystemsTable{
+	width: 100%;
+}
 #fppSystemsTable .multisyncRowCheckbox{
 	margin: auto;
 	display: block;
